--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 --extra-index-url https://download.pytorch.org/whl/cu118
 
+torch==2.0.1+cu118
+torchvision==0.15.2+cu118
+torchaudio==2.0.2+cu118
 numpy==1.24.3
 opencv-python==4.8.0.74
 onnx==1.14.0
